--- a/app/src/main/res/drawable/bg_button_green_selectable.xml
+++ b/app/src/main/res/drawable/bg_button_green_selectable.xml
@@ -4,7 +4,7 @@
 
     <item android:state_pressed="true">
         <shape android:shape="rectangle">
-            <solid android:color="@color/purple_dark" />
+            <solid android:color="@color/green_dark" />
             <!--<solid android:color="@android:color/transparent" />-->
             <corners android:radius="5dp" />
         </shape>
@@ -12,7 +12,7 @@
     </item>
     <item android:state_selected="true">
         <shape android:shape="rectangle">
-            <solid android:color="@color/purple" />
+            <solid android:color="@color/green" />
             <corners android:radius="5dp" />
         </shape>
 
@@ -20,7 +20,7 @@
 
     <item >
         <shape android:shape="rectangle">
-            <solid android:color="#9c9c9c" />
+            <solid android:color="#bcbcbc" />
             <!--<solid android:color="@android:color/transparent" />-->
             <corners android:radius="5dp" />
         </shape>
