--- a/app/src/main/res/values/styles_text.xml
+++ b/app/src/main/res/values/styles_text.xml
@@ -22,6 +22,8 @@
         <item name="android:layout_width">match_parent</item>
         <item name="android:textSize">18sp</item>
         <item name="android:layout_marginTop">10dp</item>
+        <item name="android:background">@drawable/bg_frame_grey</item>
+        <item name="android:padding">10dp</item>
     </style>
 
 </resources>
