--- a/app/src/main/res/drawable/bg_button_green_selectable.xml
+++ b/app/src/main/res/drawable/bg_button_green_selectable.xml
@@ -2,7 +2,8 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
 
-    <item android:state_pressed="true">
+    <item android:state_pressed="true"
+        android:state_selected="true">
         <shape android:shape="rectangle">
             <solid android:color="@color/green_dark" />
             <!--<solid android:color="@android:color/transparent" />-->
@@ -10,6 +11,17 @@
         </shape>
 
     </item>
+
+    <item android:state_pressed="true"
+        android:state_selected="false">
+        <shape android:shape="rectangle">
+            <solid android:color="#ababab" />
+            <!--<solid android:color="@android:color/transparent" />-->
+            <corners android:radius="5dp" />
+        </shape>
+
+    </item>
+
     <item android:state_selected="true">
         <shape android:shape="rectangle">
             <solid android:color="@color/green" />
