--- a/app/src/main/res/layout/activity_entity_info.xml
+++ b/app/src/main/res/layout/activity_entity_info.xml
@@ -24,7 +24,6 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
-
                 <ImageView
                     android:id="@+id/img_entity"
                     android:layout_width="match_parent"
@@ -47,7 +46,9 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:padding="5dp"
-                        android:src="@mipmap/ic_heart_empty" />
+                        android:tint="@color/grey_disabled"
+                        android:src="@mipmap/ic_heart_empty"
+                        android:background="@drawable/background_pressed_common"/>
 
                     <View style="@style/SeparatorVertical.Grey" />
 
@@ -117,21 +118,21 @@
                     android:id="@+id/tv_entity_description"
                     style="@style/TextBase"
                     android:layout_marginTop="15dp"
-                    android:padding="10dp"/>
+                    android:padding="10dp" />
 
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:background="@color/purple"
                     android:orientation="horizontal"
-                    android:padding="10dp"
-                    android:background="@color/purple">
+                    android:padding="10dp">
 
                     <TextView
                         style="@style/TextBase.White"
+                        android:layout_marginLeft="20dp"
                         android:text="@string/entity_offers"
-                        android:textSize="20dp"
-                        android:layout_marginLeft="20dp"/>
+                        android:textSize="20dp" />
 
                 </LinearLayout>
 
@@ -139,7 +140,7 @@
                     android:id="@+id/recycler_offers"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:nestedScrollingEnabled="false"/>
+                    android:nestedScrollingEnabled="false" />
 
             </LinearLayout>
         </ScrollView>
