--- a/app/src/main/res/layout/view_register_entity.xml
+++ b/app/src/main/res/layout/view_register_entity.xml
@@ -45,63 +45,72 @@
         android:text="@string/social_currency"
         android:textSize="20sp" />
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center_vertical"
-        android:orientation="horizontal"
         android:layout_marginTop="10dp">
 
         <TextView
             style="@style/TextBase"
-            android:text="@string/how_much_boniatos_accept_max" />
+            android:text="@string/how_much_boniatos_accept_max"
+            android:layout_alignParentLeft="true"
+            android:layout_centerVertical="true"
+            android:layout_toLeftOf="@+id/edit_max_accept_percent" />
 
-        <View style="@style/XpansorHoriz" />
 
         <EditText
             android:id="@+id/edit_max_accept_percent"
             style="@style/EditTextAuth"
             android:layout_width="wrap_content"
             android:layout_marginTop="0dp"
-            android:ems="3"
+            android:ems="2"
             android:inputType="number|phone"
+            android:layout_toLeftOf="@+id/tv_percent_max_accept"
             android:gravity="right"/>
 
         <TextView
+            android:id="@+id/tv_percent_max_accept"
             style="@style/TextBase"
             android:layout_marginLeft="5dp"
             android:text="%"
-            android:textSize="26sp" />
-    </LinearLayout>
+            android:textSize="26sp"
+            android:layout_centerVertical="true"
+            android:layout_alignParentRight="true"/>
+    </RelativeLayout>
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_vertical"
-        android:orientation="horizontal"
         android:layout_marginTop="10dp">
 
         <TextView
             style="@style/TextBase"
-            android:text="@string/bonus_percent" />
+            android:text="@string/bonus_percent"
+            android:layout_alignParentLeft="true"
+            android:layout_centerVertical="true"
+            android:layout_toLeftOf="@+id/edit_bonus_percent"/>
 
-        <View style="@style/XpansorHoriz" />
 
         <EditText
             android:id="@+id/edit_bonus_percent"
             style="@style/EditTextAuth"
             android:layout_width="wrap_content"
             android:layout_marginTop="0dp"
-            android:ems="3"
+            android:ems="2"
             android:inputType="number|phone"
-            android:gravity="right"/>
+            android:gravity="right"
+            android:layout_toLeftOf="@+id/tv_percent_bonus"/>
 
         <TextView
+            android:id="@+id/tv_percent_bonus"
             style="@style/TextBase"
             android:layout_marginLeft="5dp"
             android:text="%"
+            android:layout_centerVertical="true"
+            android:layout_alignParentRight="true"
             android:textSize="26sp" />
-    </LinearLayout>
+    </RelativeLayout>
 
 
     <EditText
