--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -51,6 +51,12 @@
             android:layout_gravity="start"
             app:headerLayout="@layout/view_header_menu"/>
 
+        <!--<include-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="match_parent"-->
+            <!--android:layout_gravity="end"-->
+            <!--layout="@layout/view_register_entity" />-->
+
     </android.support.v4.widget.DrawerLayout>
 
 
