--- a/app/src/main/res/layout/fragment_entities_map.xml
+++ b/app/src/main/res/layout/fragment_entities_map.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="net.mercadosocial.moneda.ui.entities.EntitiesMapFragment">
+    tools:context="net.mercadosocial.moneda.ui.entities.map.EntitiesMapFragment">
 
 
     <org.osmdroid.views.MapView
