--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,7 @@
     <color name="green">#A7CE05</color>
     <color name="green_dark">#829f0f</color>
     <color name="green_light">#C6E504</color>
+    <color name="green_extra_light">#7cc6e504</color>
     <color name="purple">#912991</color>
     <color name="purple_light">#B7A0BF</color>
     <color name="purple_dark">#432850</color>
