--- a/app/src/main/res/layout/fragment_entities.xml
+++ b/app/src/main/res/layout/fragment_entities.xml
@@ -1,4 +1,4 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -6,48 +6,34 @@
     tools:context="net.mercadosocial.moneda.ui.entities.EntitiesFragment">
 
     <LinearLayout
+        android:id="@+id/view_search_entities"
         android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:gravity="center"
-        android:orientation="vertical"
-        android:background="@color/green_light">
+        android:layout_height="wrap_content"
+        android:background="@color/green_light"
+        android:orientation="horizontal"
+        android:padding="10dp"
+        android:visibility="gone">
 
-        <TextView
-            android:id="@+id/tv_distance"
+        <EditText
+            android:id="@+id/edit_search_entities"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:hint="@string/search_entities" />
+
+        <android.support.v7.widget.AppCompatButton
+            android:id="@+id/btn_search_entities"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingLeft="35dp"
-            android:paddingRight="35dp"
-            android:paddingTop="5dp"
-            android:paddingBottom="5dp"
-            android:gravity="center"
-            android:background="@drawable/bg_distance_text"
-            android:textColor="#333333"
-            android:text="A 100 m"/>
-
+            android:backgroundTint="@color/purple"
+            android:textColor="@color/green"
+            android:text="@string/search"/>
     </LinearLayout>
 
-    <RelativeLayout
+    <net.mercadosocial.moneda.views.NonSwipeableViewPager
+        android:id="@+id/viewpager_entities"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent" />
 
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/recycler_entities"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
 
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="10dp"
-            android:background="@drawable/entities_trans_gradient_top"
-            android:visibility="gone"/>
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="10dp"
-            android:background="@drawable/entities_trans_gradient_bottom"
-            android:layout_alignParentBottom="true"
-            android:visibility="gone"/>
-    </RelativeLayout>
-
-</LinearLayout>
+</android.support.v7.widget.LinearLayoutCompat>
