--- a/app/src/main/res/layout/fragment_novelties.xml
+++ b/app/src/main/res/layout/fragment_novelties.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="net.mercadosocial.moneda.ui.entities.EntitiesFragment">
+    tools:context="net.mercadosocial.moneda.ui.entities.list.EntitiesListFragment">
 
     <TextView
         android:layout_width="match_parent"
@@ -17,7 +17,6 @@
         android:id="@+id/recycler_novelties"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:padding="10dp"
         android:visibility="visible"/>
 
 </LinearLayout>
