--- a/app/src/main/res/layout/fragment_wallet.xml
+++ b/app/src/main/res/layout/fragment_wallet.xml
@@ -12,7 +12,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:gravity="center">
+        android:gravity="center"
+        android:visibility="visible">
 
         <ImageView
             android:layout_width="wrap_content"
@@ -119,6 +120,7 @@
                 android:visibility="gone">
 
                 <TextView
+                    android:id="@+id/tv_number_pending_payments"
                     style="@style/TextBase"
                     android:text="@string/pending_payments_warning"
                     android:textColor="@color/orange"
@@ -182,9 +184,17 @@
                     android:orientation="vertical"
                     android:padding="15dp">
 
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:adjustViewBounds="true"
+                        android:src="@mipmap/img_graphs"/>
                     <TextView
                         style="@style/TextBase.Purple"
-                        android:text="@string/graphics" />
+                        android:text="@string/graphics"
+                        android:hint="@string/movements"
+                        android:layout_marginTop="10dp"
+                        android:gravity="center_horizontal"/>
                 </LinearLayout>
 
                 <View style="@style/XpansorHoriz" />
@@ -198,8 +208,14 @@
                     android:orientation="vertical"
                     android:padding="15dp">
 
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:adjustViewBounds="true"
+                        android:src="@mipmap/ic_transactions"/>
                     <TextView
                         style="@style/TextBase.Purple"
+                        android:layout_marginTop="10dp"
                         android:text="@string/movements" />
                 </LinearLayout>
 
