--- a/app/src/main/res/layout/row_entity_offer.xml
+++ b/app/src/main/res/layout/row_entity_offer.xml
@@ -25,14 +25,27 @@
 
         <TextView
             android:id="@+id/tv_offer_name"
-            style="@style/TextBase.White"
-            android:layout_marginRight="5dp"
-            android:layout_alignParentLeft="true"
-            android:layout_toLeftOf="@+id/img_starred"
+            style="@style/TextBase"
             android:ellipsize="end"
-            android:maxLines="1"
+            android:textColor="@color/grey"
+            android:maxLines="2"
             android:textSize="18sp"
+            android:textStyle="bold"
             android:text="Fabricantes de sueños"/>
+
+        <!--<View style="@style/SeparatorHorizontal.Grey"-->
+            <!--android:layout_marginTop="10dp"-->
+            <!--android:layout_marginBottom="10dp"/>-->
+
+        <TextView
+            android:id="@+id/tv_offer_date"
+            style="@style/TextBase"
+            android:textColor="@color/grey"
+            android:maxLines="2"
+            android:textSize="16sp"
+            android:text="Fabricantes de sueños"
+            android:layout_marginTop="10dp"/>
+
 
 
     </LinearLayout>
