--- a/app/src/main/res/menu/fragment_entities.xml
+++ b/app/src/main/res/menu/fragment_entities.xml
@@ -7,7 +7,13 @@
         android:icon="@mipmap/ic_search"
         android:title="@string/search"
         app:showAsAction="always"
-        android:orderInCategory="100"
-        android:checkable="true"/>
+        android:orderInCategory="100"/>
+
+    <item
+        android:id="@+id/menuItem_show_map_list"
+        android:icon="@mipmap/ic_map"
+        android:title="@string/map_list"
+        app:showAsAction="always"
+        android:orderInCategory="200"/>
 
 </menu>
