--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -28,6 +28,7 @@
     <color name="bg_edittext">#F8FCE1</color>
 
     <color name="grey_disabled">#ababab</color>
+    <color name="red">#F00</color>
 
 
 </resources>
