--- a/app/src/main/res/layout/fragment_payment_step3.xml
+++ b/app/src/main/res/layout/fragment_payment_step3.xml
@@ -9,7 +9,8 @@
 
     <TextView
         style="@style/TextBase.Purple"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="15dp"
         android:text="@string/check_payment_data"
         android:textSize="22sp" />
 
@@ -121,7 +122,7 @@
     <TextView
         android:id="@+id/btn_confirm_payment"
         style="@style/ButtonMes"
-        android:layout_margin="15dp"
+        android:layout_margin="10dp"
         android:text="@string/confirm_payment" />
 
 </android.support.v7.widget.LinearLayoutCompat>
