--- a/app/src/main/res/layout/activity_recipient_select.xml
+++ b/app/src/main/res/layout/activity_recipient_select.xml
@@ -47,7 +47,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@mipmap/ic_search"
-            android:backgroundTint="@color/green"/>
+            app:backgroundTint="@color/green"/>
 
     </LinearLayout>
 
