--- a/app/src/main/res/layout/fragment_entities.xml
+++ b/app/src/main/res/layout/fragment_entities.xml
@@ -2,6 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     tools:context="net.mercadosocial.moneda.ui.entities.EntitiesFragment">
 
@@ -25,7 +26,7 @@
             android:id="@+id/btn_search_entities"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:backgroundTint="@color/purple"
+            app:backgroundTint="@color/purple"
             android:text="@string/search"
             android:textColor="@color/green" />
     </LinearLayout>
