--- a/app/src/main/res/layout/view_dialog_new_payment.xml
+++ b/app/src/main/res/layout/view_dialog_new_payment.xml
@@ -2,9 +2,18 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:gravity="center_horizontal"
     android:padding="10dp">
+
+    <TextView
+        style="@style/TextBase"
+        android:text="@string/new_payment_received"
+        android:textStyle="bold"
+        android:textSize="18sp"
+        android:layout_margin="10dp"
+        android:gravity="center_horizontal"/>
 
     <TextView
         android:id="@+id/tv_new_payment_info"
@@ -20,13 +29,13 @@
         <android.support.v7.widget.AppCompatButton
             android:id="@+id/btn_payment_cancel"
             style="@style/TextBase.White"
-            android:backgroundTint="@color/red"
+            app:backgroundTint="@color/red"
             android:text="@string/reject"/>
 
         <android.support.v7.widget.AppCompatButton
             android:id="@+id/btn_payment_accept"
             style="@style/TextBase.White"
-            android:backgroundTint="@color/green_dark"
+            app:backgroundTint="@color/green_dark"
             android:text="@string/accept"
             android:layout_marginLeft="60dp"/>
     </LinearLayout>
