--- a/app/src/main/res/layout/view_gallery_item.xml
+++ b/app/src/main/res/layout/view_gallery_item.xml
@@ -9,7 +9,8 @@
     <ImageView
         android:id="@+id/img_gallery_item"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:adjustViewBounds="true"
-        android:scaleType="centerCrop"/>
+        android:scaleType="centerCrop"
+        android:background="@color/white"/>
 </LinearLayout>
