--- a/app/src/main/res/values/theme.xml
+++ b/app/src/main/res/values/theme.xml
@@ -51,23 +51,25 @@
     <style name="MyDialogTheme" parent="Theme.AppCompat.Light.Dialog.Alert">
 
         <!--<item name="android:backgroundDimAmount">0.0</item>-->
-        <!--<item name="android:windowIsTranslucent">true</item>-->
+        <!--<item name="android:backgroundDimEnabled">false</item>-->
 
-        <!--<item name="android:background">@android:color/transparent</item>-->
+        <item name="android:windowIsTranslucent">true</item>
 
-        <!--<item name="android:windowFrame">@null</item>-->
+        <item name="android:background">@android:color/transparent</item>
+
+        <item name="android:windowFrame">@null</item>
         <!-- turn off any drawable used to draw a frame on the window -->
 
         <item name="android:windowBackground">@null</item>
         <!-- turn off any drawable used to draw a frame on the window -->
 
-        <!--<item name="android:windowIsFloating">true</item>-->
+        <item name="android:windowIsFloating">true</item>
         <!-- float the window so it does not fill the screen -->
 
-        <!--<item name="android:windowNoTitle">true</item>-->
+        <item name="android:windowNoTitle">true</item>
         <!-- remove the title bar we make our own-->
 
-        <!--<item name="android:windowContentOverlay">@null</item>-->
+        <item name="android:windowContentOverlay">@null</item>
         <!-- remove the shadow from under the title bar -->
     </style>
 
