--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,9 +9,10 @@
     <color name="green">#A7CE05</color>
     <color name="green_dark">#829f0f</color>
     <color name="green_light">#C6E504</color>
-    <color name="green_extra_light">#7cc6e504</color>
+    <color name="green_extra_light">#f7ffc7</color>
     <color name="purple">#912991</color>
     <color name="purple_light">#B7A0BF</color>
+    <color name="purple_extra_light">#e4dce6</color>
     <color name="purple_dark">#432850</color>
     <color name="black">#000</color>
 
