--- a/app/src/main/res/layout/activity_novelty_detail.xml
+++ b/app/src/main/res/layout/activity_novelty_detail.xml
@@ -5,7 +5,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@drawable/green_gradient"
     tools:context="net.mercadosocial.moneda.ui.entity_info.EntityInfoActivity">
 
     <include layout="@layout/toolbar" />
@@ -40,8 +39,9 @@
                 android:id="@+id/img_novelty"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:maxHeight="200dp"
                 android:adjustViewBounds="true"
-                android:scaleType="centerCrop"
+                android:scaleType="centerInside"
                 android:layout_marginTop="10dp"/>
 
             <TextView
