--- a/app/src/main/res/layout/fragment_payment_step1.xml
+++ b/app/src/main/res/layout/fragment_payment_step1.xml
@@ -18,7 +18,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:visibility="gone">
 
         <TextView
             android:layout_width="0dp"
