--- a/app/src/main/res/layout/view_dialog_new_payment.xml
+++ b/app/src/main/res/layout/view_dialog_new_payment.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:gravity="center_horizontal"
@@ -17,10 +17,11 @@
 
     <TextView
         android:id="@+id/tv_new_payment_info"
-        style="@style/TextBase"/>
+        style="@style/TextBase"
+        android:gravity="center_horizontal"/>
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:gravity="center_horizontal"
