--- a/app/src/main/res/layout/view_header_menu.xml
+++ b/app/src/main/res/layout/view_header_menu.xml
@@ -18,6 +18,7 @@
             android:id="@+id/img_avatar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:maxWidth="80dp"
             android:adjustViewBounds="true"
             android:src="@mipmap/ic_avatar" />
 
