--- a/app/src/main/res/layout/view_register_person.xml
+++ b/app/src/main/res/layout/view_register_person.xml
@@ -11,6 +11,11 @@
         android:hint="@string/name"
         android:inputType="textCapWords" />
 
+    <EditText
+        android:id="@+id/edit_surnames_person"
+        style="@style/EditTextAuth"
+        android:hint="@string/surname"
+        android:inputType="textCapWords" />
 
     <EditText
         android:id="@+id/edit_nif"
