--- a/app/src/main/res/drawable/bg_button_green_rounded.xml
+++ b/app/src/main/res/drawable/bg_button_green_rounded.xml
@@ -5,6 +5,8 @@
     <item android:state_enabled="false">
         <shape android:shape="rectangle">
             <solid android:color="@color/grey_disabled" />
+            <!--<solid android:color="@android:color/transparent" />-->
+            <corners android:radius="25dp" />
         </shape>
 
     </item>
@@ -12,12 +14,15 @@
     <item android:state_pressed="true">
         <shape android:shape="rectangle">
             <solid android:color="@color/green_dark" />
+            <!--<solid android:color="@android:color/transparent" />-->
+            <corners android:radius="25dp" />
         </shape>
 
     </item>
     <item>
         <shape android:shape="rectangle">
             <solid android:color="@color/green" />
+            <corners android:radius="25dp" />
         </shape>
 
     </item>
