--- a/app/src/main/res/drawable/bg_button_red.xml
+++ b/app/src/main/res/drawable/bg_button_red.xml
@@ -11,13 +11,14 @@
 
     <item android:state_pressed="true">
         <shape android:shape="rectangle">
-            <solid android:color="@color/green_dark" />
+            <solid android:color="@color/red_dark" />
         </shape>
 
     </item>
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="@color/green" />
+            <solid android:color="@color/red" />
+            <padding android:top="0dp" android:bottom="0dp" />
         </shape>
 
     </item>
