--- a/app/src/main/res/drawable/bg_button_red_rounded.xml
+++ b/app/src/main/res/drawable/bg_button_red_rounded.xml
@@ -5,19 +5,24 @@
     <item android:state_enabled="false">
         <shape android:shape="rectangle">
             <solid android:color="@color/grey_disabled" />
+            <!--<solid android:color="@android:color/transparent" />-->
+            <corners android:radius="25dp" />
         </shape>
 
     </item>
 
     <item android:state_pressed="true">
         <shape android:shape="rectangle">
-            <solid android:color="@color/green_dark" />
+            <solid android:color="@color/red_dark" />
+            <!--<solid android:color="@android:color/transparent" />-->
+            <corners android:radius="25dp" />
         </shape>
 
     </item>
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="@color/green" />
+            <solid android:color="@color/red" />
+            <corners android:radius="25dp" />
         </shape>
 
     </item>
