--- a/app/src/main/res/layout/row_payment.xml
+++ b/app/src/main/res/layout/row_payment.xml
@@ -29,13 +29,13 @@
         <android.support.v7.widget.AppCompatButton
             android:id="@+id/btn_payment_cancel"
             style="@style/TextBase.White"
-            app:backgroundTint="@color/red"
+            app:backgroundTint="@color/bg_button_red"
             android:text="@string/reject"/>
 
         <android.support.v7.widget.AppCompatButton
             android:id="@+id/btn_payment_accept"
             style="@style/TextBase.White"
-            app:backgroundTint="@color/green_dark"
+            app:backgroundTint="@color/bg_button_green"
             android:text="@string/accept"
             android:layout_marginLeft="60dp"/>
     </LinearLayout>
