- new app icon - badge in navigation view for pending notifications

--- a/app/src/main/res/layout/view_register_entity.xml
+++ b/app/src/main/res/layout/view_register_entity.xml
@@ -16,8 +16,8 @@
     <EditText
         android:id="@+id/edit_cif"
         style="@style/EditTextAuth"
-        android:hint="@string/nif"
-        android:inputType="textCapCharacters" />
+        android:hint="@string/cif"
+        android:inputType="textCapCharacters|textNoSuggestions" />
 
 
     <RelativeLayout
